--- a/Demo.html
+++ b/Demo.html
@@ -3,6 +3,8 @@
       <input type="text" class="input js-input" placeholder="搜索" />
       <div class="m-search-result js-search-result"></div>
     </div></div><nav class="m-header-nav js-nav"><ul class="m-header-items"><li class="item "><a class="href" href="components/Button.html">文档</a></li><li class="item active"><a class="href" href="">Demo</a></li></ul></nav><div id="js-nav-btn" class="m-header-btn ui-font-ydoc"></div></header><div class="m-content" id="js-content"><div id="markdown-body" class="m-content-container markdown-body"><h2 id="demo">Demo</h2>
+<p>请扫码下载，然后在<a href="https://doc.quickapp.cn/tools/debugging-tools.html" target="_blank">快应用调试器</a>里选择本地安装打开。</p>
+<p><img src="assets/images/download.png" alt="下载"></p>
 </div></div></div></div><div></div><script>
     var $content = document.getElementById('js-content');
     var $summaryItems = Array.prototype.slice.call(document.querySelectorAll('#js-menu .href'));
