--- a/index.html
+++ b/index.html
@@ -1,8 +1,68 @@
-<!DOCTYPE html><html lang="zh-CN"><head><meta charSet="UTF-8"/><meta content="text/html; charset=utf-8" http-equiv="Content-Type"/><meta http-equiv="X-UA-Compatible" content="IE=edge"/><meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/><meta name="apple-mobile-web-app-capable" content="yes"/><meta name="apple-mobile-web-app-status-bar-style" content="black"/><link rel="apple-touch-icon" sizes="180x180" href="ydoc/images/apple-touch-icon.png"/><link rel="icon" type="image/png" sizes="32x32" href="ydoc/images/favicon-32x32.png"/><link rel="icon" type="image/png" sizes="16x16" href="ydoc/images/favicon-16x16.png"/><link rel="manifest" href="ydoc/images/manifest.json"/><link rel="mask-icon" href="ydoc/images/safari-pinned-tab.svg" color="#5bbad5"/><meta name="theme-color" content="#ffffff"/><meta http-equiv="Cache-Control" content="no-transform"/><meta http-equiv="Cache-Control" content="no-siteapp"/><title>Schnee UI</title><link rel="stylesheet" href="ydoc/styles/style.css"/><meta name="author" content="ymfe"/><meta name="keywords"/><meta name="description" content="website description"/><meta id="releativePath" content=""/><link rel="stylesheet" href="ydoc/ydoc-plugin-search/search.css"/></head><body><div class="g-doc"><div class="m-main" id="js-panel"><header class="m-header" id="js-header"><div class="m-header-title js-logo"><a href="" target="_self"><img class="logo" width="36" src="ydoc/images/dog@2x.png"/><h6 class="name">Schnee UI</h6></a></div><div><div class="m-search">
+<!DOCTYPE html><html lang="zh-CN"><head><meta charSet="UTF-8"/><meta content="text/html; charset=utf-8" http-equiv="Content-Type"/><meta http-equiv="X-UA-Compatible" content="IE=edge"/><meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/><meta name="apple-mobile-web-app-capable" content="yes"/><meta name="apple-mobile-web-app-status-bar-style" content="black"/><link rel="icon" type="image/png" sizes="32x32" href="images/titleLogo.png"/><link rel="icon" type="image/png" sizes="16x16" href="images/titleLogo.png"/><meta name="theme-color" content="#ffffff"/><meta http-equiv="Cache-Control" content="no-transform"/><meta http-equiv="Cache-Control" content="no-siteapp"/><title>Schnee UI</title><link rel="stylesheet" href="ydoc/styles/style.css"/><meta name="author" content="ymfe"/><meta name="keywords"/><meta name="description" content="website description"/><meta id="releativePath" content=""/><link rel="stylesheet" href="ydoc/ydoc-plugin-search/search.css"/><link rel="stylesheet" href="styles/index.css"/></head><body><div class="g-doc"><div class="m-main" id="js-panel"><header class="m-header" id="js-header"><div class="m-header-title js-logo"><a href="" target="_self"><img class="logo" width="36" src="images/logo-top.png"/></a></div><div><div class="m-search">
       <div class="icon">&#xf0fd;</div>
       <input type="text" class="input js-input" placeholder="搜索" />
       <div class="m-search-result js-search-result"></div>
-    </div></div><nav class="m-header-nav js-nav"><ul class="m-header-items"><li class="item "><a class="href" href="components/Button.html">文档</a></li><li class="item "><a class="href" href="Demo.html">Demo</a></li></ul></nav><div id="js-nav-btn" class="m-header-btn ui-font-ydoc"></div></header><div class="m-content" id="js-content"><div class="g-home"><section class="m-section home"><div class="m-section-container"><div class="m-section-title"><h4 class="name">Schnee UI</h4><p class="desc">运用于 Nanachi 的 H5、快应用的补丁组件</p><div class="m-section-btngroup"><a href="./components/Button.html"><div class="btn ">文档</div></a><a href="https://github.com/qunarcorp/schnee-ui"><div class="btn btn-ghost">Github &gt;</div></a></div></div><div class="m-section-banner"><img src="./ydoc/images/dogbg@1x.png" alt="bg" srcSet="./ydoc/images/dogbg@2x.png 2x"/></div></div></section><section class="m-section feature"><div class="m-section-container"><div class="m-section-box"><div class="item"><h6 class="title">多端支持</h6><p class="desc">支持微信、百度、支付宝小程序与快应用</p></div></div></div></section></div><footer class="m-footer"><div class="m-footer-container"><div class="m-footer-links"><div class="group"><p class="title">团队网址</p><ul><li><a class="href" href="https://ymfe.org/">YMFE</a></li><li><a class="href" href="https://blog.ymfe.org/">YMFE Blog</a></li></ul></div><div class="group"><p class="title">Git仓库</p><ul><li><a class="href" href="https://github.com/qunarcorp/schnee-ui">Github</a></li><li><a class="href" href="https://github.com/qunarcorp/schnee-ui/issues">Github Issue</a></li></ul></div></div><div class="m-footer-title"><p class="copyright">© 2019 <a class="href" href="https://ymfe.org/">YMFE Team</a></p><p>Build by <a class="href" href="https://ydoc.ymfe.org/">ydoc</a></p></div></div></footer></div></div></div><div></div><script>
+    </div></div><nav class="m-header-nav js-nav"><ul class="m-header-items"><li class="item "><a class="href" href="components/Button.html">文档</a></li><li class="item "><a class="href" href="Demo.html">Demo</a></li></ul></nav><div id="js-nav-btn" class="m-header-btn ui-font-ydoc"></div></header><div class="m-content" id="js-content"><div>
+    <div class="banner">
+        <h1>Schnee UI</h1>
+        <p class="text">运用于 Nanachi 的 H5、快应用的补丁组件</p>
+        <div>
+            <a href="./components/Button.html">
+                <button class="btn1">查看文档</button>
+            </a>
+            <a target="_blank" href="https://github.com/qunarcorp/schnee-ui">
+                <button class="btn2">Github</button>
+            </a>
+        </div>
+    </div>
+    <div class="content">
+        <h2>多端支持</h2>
+        <div class="instructions">
+            <div class="i">
+                <img src="images/inset1.png"/>
+                <p class="text">微信小程序</p>
+            </div>
+            <div class="i">
+                <img src="images/inset2.png"/>
+                <p class="text">百度小程序</p>
+            </div>
+            <div class="i">
+                <img src="images/inset3.png"/>
+                <p class="text">支付宝小程序</p>
+            </div>
+            <div class="i">
+                <img src="images/inset4.png"/>
+                <p class="text">快应用</p>
+            </div>
+        </div>
+    </div>
+    <div class="foot">
+            <div class="group">
+                <p class="title">团队网址</p>
+                <a target="_blank" href="http://ued.qunar.com/">
+                    <p class="t">Qunar UED</p>
+                </a>
+            </div>
+            <div class="group">
+                <p class="title">Git仓库</p>
+                <a target="_blank" href="https://github.com/qunarcorp/schnee-ui">
+                    <p class="t">Github</p>
+                </a>
+                <a target="_blank" href="https://github.com/qunarcorp/schnee-ui/issues">
+                    <p class="t">Github Issue</p>
+                </a>
+            </div>
+            <div class="group">
+                <p class="title">关于Schnee UI</p>
+                <p class="t">关于我们</p>
+                <p class="t">为什么选择Schnee UI</p>
+            </div>
+            <div class="group">
+                <img src="images/logo-foot.png" class="wh" />
+                <p class="padtop">&copy;2019 YMFE Team</p>
+            </div>
+    </div>
+</div></div></div></div><div></div><script>
     var $content = document.getElementById('js-content');
     var $summaryItems = Array.prototype.slice.call(document.querySelectorAll('#js-menu .href'));
     var $menu = document.getElementById('js-menu');
