--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             </div>
             <div class="group">
                 <img src="images/logo-foot.png" class="wh" />
-                <p class="padtop">&copy;2019 YMFE Team</p>
+                <p class="padtop">&copy;2019 Quanr Team</p>
             </div>
     </div>
 </div></div></div></div><div></div><script>
